Fix context sub-menu alignment on Safari. Fixes #3873

--- a/web/pgadmin/static/scss/_webcabin.pgadmin.scss
+++ b/web/pgadmin/static/scss/_webcabin.pgadmin.scss
@@ -265,7 +265,8 @@
 }
 
 .wcMenuSeparator, .context-menu-separator {
-  border: 0.5px solid $dropdown-border-color;
+  border: 1px solid $dropdown-border-color;
+  transform: scaleY(0.5);
 }
 
 .wcLoadingBackground {
@@ -307,10 +308,10 @@
 }
 
 .context-menu-submenu::after {
-  font-family: 'FontAwesome';
+  font-family: $font-family-icon;
   content: "\f054" !important;
   right: 15px;
-  top: auto;
+  top: 3px;
   font-size: 0.6rem;
   line-height: 2;
   border-style: none;
